Integrated more closely with Core403 and removed Discord IDs for safety